The overflow hidden command in the css file doesnt let the map display correctly in client view

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -40,7 +40,7 @@
   font-size: 14px;
 }
 
-#my-Map {
+.map {
   width:  70%;
   height: 100%;
   float:  left;
